fixed grid and flexbox wrapping issues.

--- a/scss/_gamepage-layout.scss
+++ b/scss/_gamepage-layout.scss
@@ -27,9 +27,16 @@
   .game__inputs {
     // Flexbox Layout
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
+
+    div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+    }
   }
 }
 
